--- a/.env.local.sample
+++ b/.env.local.sample
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_END_POINT=
-NEXT_PUBLIC_WOOCOMMERCE_KEY=
-NEXT_PUBLIC_WOOCOMMERCE_SECRET=
+END_POINT=
+WOOCOMMERCE_KEY=
+WOOCOMMERCE_SECRET=
