--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.13",
-    "@types/node": "20.2.3",
+    "@prisma/client": "^4.16.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
@@ -25,7 +25,10 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/node": "^20.3.1",
     "@types/woocommerce__woocommerce-rest-api": "^1.0.2",
-    "@woocommerce/woocommerce-rest-api": "^1.0.1"
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "prisma": "^4.16.0",
+    "ts-node": "^10.9.1"
   }
 }
