--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
+    "@types/redux-persist": "^4.3.1",
     "@types/woocommerce__woocommerce-rest-api": "^1.0.2",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "prisma": "^4.16.0",
