--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^1.0.0-beta.13",
+    "@nextui-org/react": "^2.6.11",
     "@prisma/client": "^4.16.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "18.2.6",
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.41.0",
     "eslint-config-next": "^15.1.3",
+    "framer-motion": "^11.16.0",
     "next": "^15.1.3",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
