--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.6.11",
+    "@heroui/react": "2.7.8",
     "@prisma/client": "^4.16.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "18.2.6",
@@ -37,5 +37,6 @@
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "prisma": "^4.16.0",
     "ts-node": "^10.9.1"
-  }
+  },
+  "packageManager": "yarn@4.9.1"
 }
